test/library/standard/Random/RandomStreamInterface/getNextTestHalts.good
getNextTestHalts.chpl:6: error: halt reached - Cannot generate random numbers within empty range: [2, 1]
